test/syc/bad/staticvarafterns.c
/*
 * Static 'x' was previously declared as non-static.
 */
int x;

static int x;
